# libsrtp

./: CMakeLists.txt  config_cmake.h
crypto/include/: config_linux.h
